# vcpkgDemo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  base64.cpp  iconv_demo.cpp  main.cpp
